--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-adium-theme-ubuntu==0.3.4
+#adium-theme-ubuntu==0.3.4
 backports.ssl-match-hostname==3.5.0.1
 cached-property==1.3.0
 chardet==2.3.0
