--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ PyYAML==3.12
 requests==2.12.3
 six==1.10.0
 texttable==0.8.7
-unity-lens-photos==1.0
+#unity-lens-photos==1.0
 urllib3==1.19.1
 vboxapi==1.0
 websocket-client==0.40.0
