--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,6 @@ six==1.10.0
 texttable==0.8.7
 #unity-lens-photos==1.0
 urllib3==1.19.1
-vboxapi==1.0
+#vboxapi==1.0
 websocket-client==0.40.0
 Werkzeug==0.11.11
