--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ backports.ssl-match-hostname==3.5.0.1
 cached-property==1.3.0
 chardet==2.3.0
 click==6.6
-cryptography==1.2.3
+#cryptography==1.2.3
 docker-compose==1.9.0
 docker-py==1.10.6
 docker-pycreds==0.2.1
