--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 #adium-theme-ubuntu==0.3.4
-backports.ssl-match-hostname==3.5.0.1
-cached-property==1.3.0
+#backports.ssl-match-hostname==3.5.0.1
+#cached-property==1.3.0
 chardet==2.3.0
-click==6.6
+#click==6.6
 #cryptography==1.2.3
-docker-compose==1.9.0
-docker-py==1.10.6
-docker-pycreds==0.2.1
-dockerpty==0.4.1
-docopt==0.6.2
+#docker-compose==1.9.0
+#docker-py==1.10.6
+#docker-pycreds==0.2.1
+#dockerpty==0.4.1
+#docopt==0.6.2
 enum34==1.1.6
 Flask==0.11.1
 funcsigs==1.0.2
@@ -21,9 +21,9 @@ jsonschema==2.5.1
 mock==2.0.0
 ndg-httpsclient==0.4.0
 pbr==1.10.0
-pyasn1==0.1.9
-pyOpenSSL==0.15.1
-PyYAML==3.12
+#pyasn1==0.1.9
+#pyOpenSSL==0.15.1
+#PyYAML==3.12
 requests==2.12.3
 six==1.10.0
 texttable==0.8.7
