--- a/requirements.txt
+++ b/requirements.txt
@@ -9,26 +9,26 @@ chardet==2.3.0
 #docker-pycreds==0.2.1
 #dockerpty==0.4.1
 #docopt==0.6.2
-enum34==1.1.6
+#enum34==1.1.6
 Flask==0.11.1
-funcsigs==1.0.2
+#funcsigs==1.0.2
 functools32==3.2.3.post2
-idna==2.1
+#idna==2.1
 ipaddress==1.0.17
 itsdangerous==0.24
 Jinja2==2.8
 jsonschema==2.5.1
-mock==2.0.0
-ndg-httpsclient==0.4.0
-pbr==1.10.0
+#mock==2.0.0
+#ndg-httpsclient==0.4.0
+#pbr==1.10.0
 #pyasn1==0.1.9
 #pyOpenSSL==0.15.1
 #PyYAML==3.12
 requests==2.12.3
-six==1.10.0
-texttable==0.8.7
+#six==1.10.0
+#texttable==0.8.7
 #unity-lens-photos==1.0
-urllib3==1.19.1
+#urllib3==1.19.1
 #vboxapi==1.0
-websocket-client==0.40.0
-Werkzeug==0.11.11
+#websocket-client==0.40.0
+#Werkzeug==0.11.11
